--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,9 +1,6 @@
 {{page-title "Home"}}
 
-<LinkTo @route="cart" class="cart-link">
-  <i class="fa fa-shopping-cart"></i>
-</LinkTo>
-<main class="container mt-5">
-    <LinkTo @route="item" @model="1">Priduct 1</LinkTo>
-    <LinkTo @route="item" @model="2">Priduct 2</LinkTo>
-</main>
+<GeneralComponent>
+    <Product/>
+    <Product/>
+</GeneralComponent>
