TUT-104 ~ passing props and methods into components

--- a/app/components/product/details.hbs
+++ b/app/components/product/details.hbs
@@ -15,4 +15,11 @@
         <del data-test-original-price class="small text-black-50">{{'$199.95'}}</del>
         <i data-test-current-price class="text-danger font-weight-bold">{{'$99.95'}}</i>
     </section>
+    <div>
+        <h5>Color</h5>
+        <div class="product-colors active-{{@color}}">
+        <span class="product-color color-red" {{on "click" (fn @onChangeColor "red")}}></span>
+        <span class="product-color color-black" {{on "click" (fn @onChangeColor "black")}}></span>
+        </div>
+  </div>
 </div>
