--- a/app/templates/item.hbs
+++ b/app/templates/item.hbs
@@ -1,8 +1,8 @@
 {{page-title "Item"}}
 <GeneralComponent>
     <div class="product item-details-page">
-        <Product::Image/>
-        <Product::Details/>
+        <Product::Image @src={{this.productImage}}/>
+        <Product::Details @color={{this.color}} @onChangeColor={{this.onChangeColor}}/>
     </div>
     <h5 class="mt-5">Features</h5>
     <ul>
